First batch of FIXMEs for Bremen -> http://dbs.mathematik.uni-marburg.de:9123/braindump/index.php/TODO_f%C3%BCr_Bremen - changed offset for the collapseLayers button - renamed +points to +Occurrences - replaced "E" with a download icon

--- a/htdocs/src/ui_map.css
+++ b/htdocs/src/ui_map.css
@@ -275,7 +275,7 @@
 .collapseSidebar {
 	height: 12px;
 	width: 8px;
-	right: 344px;
+	right: 347px;
 	position: absolute;
 	
 	padding: 16px 1px;
